--- a/page/ProjectM/ProjectDiaryEdit/ProjectDiaryEdit.axml
+++ b/page/ProjectM/ProjectDiaryEdit/ProjectDiaryEdit.axml
@@ -11,6 +11,13 @@
       </view>
       <view class="form-line" />
       <view class="form-row">
+        <view class="form-row-label">日志日期</view>
+        <view class="form-row-content">
+          <input class="input" name="date_diary" value="{{data_1.date_diary}}" />
+        </view>
+      </view>
+      <view class="form-line" />
+      <view class="form-row">
         <view class="form-row-label">关键字</view>
         <view class="form-row-content">
           <input class="input" name="keyword" value="{{data_1.keyword}}" />
