--- a/page/ProjectM/ProjectDiaryLook/ProjectDiaryLook.axml
+++ b/page/ProjectM/ProjectDiaryLook/ProjectDiaryLook.axml
@@ -12,6 +12,14 @@
       <view class="form-line" />
 
       <view class="form-row">
+        <view class="form-row-label">日志日期</view>
+        <view class="form-row-content">
+          <input class="input" name="date_diary" disabled="disabled" value="{{data_1.date_diary}}" />
+        </view>
+      </view>
+      <view class="form-line" />
+
+      <view class="form-row">
         <view class="form-row-label">关键字</view>
         <view class="form-row-content">
           <input class="input" name="keyword" disabled="disabled" value="{{data_1.keyword}}" />
