--- a/page/ProjectM/ProjectListDiary/ProjectListDiary.axml
+++ b/page/ProjectM/ProjectListDiary/ProjectListDiary.axml
@@ -1,5 +1,8 @@
 <import src="/page/biz/components/list/index.axml" />
 
+<view style="display: flex; justify-content: space-between;">
+  <button type="ghost" size="mini" onTap="newdate" loading>{{date_diary}}</button>
+</view>
 <view>
     <template is="List" data={{...listData}}></template>
 </view>
