--- a/page/ProjectM/ProjectListDiary/ProjectListDiary.axml
+++ b/page/ProjectM/ProjectListDiary/ProjectListDiary.axml
@@ -1,7 +1,8 @@
 <import src="/page/biz/components/list/index.axml" />
 
-<view style="display: flex; justify-content: space-between;">
-  <button type="ghost" size="mini" onTap="newdate" loading>{{date_diary}}</button>
+<view>
+  <button type="ghost" size="mini" onTap="newdate_1">{{date_1}}</button>
+  <button style="margin-left: 5px;" type="ghost" size="mini" onTap="newdate_2">{{date_2}}</button>
 </view>
 <view>
     <template is="List" data={{...listData}}></template>
