--- a/page/ProjectM/ProjectDiaryListLook/ProjectDiaryListLook.axml
+++ b/page/ProjectM/ProjectDiaryListLook/ProjectDiaryListLook.axml
@@ -3,6 +3,7 @@
 <view>
   <button type="ghost" size="mini" onTap="newdate_1">{{date_1}}</button>
   <button style="margin-left: 5px;" type="ghost" size="mini" onTap="newdate_2">{{date_2}}</button>
+  <button style="margin-left: 5px;" type="ghost" size="mini" onTap="new_dept_ding">{{name_ding}}</button>
 </view>
 <view>
     <template is="List" data={{...listData}}></template>
