--- a/page/StorageWork/DingStorageInQty/DingStorageInQty.axml
+++ b/page/StorageWork/DingStorageInQty/DingStorageInQty.axml
@@ -1,3 +1,22 @@
-<view>
-  New Page
+<view class="page">
+  <view class="page-description">数量确认</view>
+  <form onSubmit="onSubmit" onReset="onReset">
+    <view class="page-section">
+
+      <view class="form-row">
+        <view class="form-row-label">入库数量</view>
+        <view class="form-row-content">
+          <input class="input" name="qty" value="" />
+        </view>
+      </view>
+      <view class="form-line" />
+
+    </view>
+    <view class="page-section">
+      <view class="page-section-btns">
+        <view>
+          <button type="primary" size="mini" formType="submit">提交</button></view>
+      </view>
+    </view>
+  </form>
 </view>
