--- a/page/StorageWork/DingStorageIn/DingStorageIn.axml
+++ b/page/StorageWork/DingStorageIn/DingStorageIn.axml
@@ -1,7 +1,11 @@
 <import src="/page/biz/components/list/index.axml" />
 <view style="display: flex; justify-content: space-between;">
-  <button type="ghost" size="mini" onTap="add_scan" loading>扫码增加</button>
-  <button type="ghost" size="mini" onTap="add_enter" loading>手输增加</button>
+  <view>
+    <button type="ghost" size="mini" onTap="add_scan" loading>扫码增加</button>
+  </view>
+  <view>
+    <button type="ghost" size="mini" onTap="add_enter" loading>手输增加</button>
+  </view>
 </view>
 <view>
   <template is="List" data={{...listData}}></template>
