--- a/page/ProjectM/ProjectDiaryEdit/ProjectDiaryEdit.axml
+++ b/page/ProjectM/ProjectDiaryEdit/ProjectDiaryEdit.axml
@@ -28,7 +28,7 @@
       <view class="page-section">
         <view class="page-section-title">日志</view>
         <view class="page-section-demo">
-          <textarea auto-height name="diary" value="{{data_1.diary}}" />
+          <textarea auto-height name="diary" value="{{data_1.diary}}" maxlength="10000" />
         </view>
         <view class="extra-info">
           <button type="ghost" size="mini" onTap="selectModel" loading>模板</button>
