--- a/page/ProjectM/ProjectDiaryEdit/ProjectDiaryEdit.axml
+++ b/page/ProjectM/ProjectDiaryEdit/ProjectDiaryEdit.axml
@@ -35,6 +35,16 @@
         </view>
       </view>
       <view class="form-line" />
+      
+      <view class="form-row">
+        <view class="form-row-label">需要解答</view>
+        <view class="page-section-demo">
+          <checkbox-group name="is_answer_need">
+            <label><checkbox value="is_answer_need" checked="{{data_1.is_answer_need}}" />需要解答</label>
+          </checkbox-group>
+        </view>
+      </view>
+      <view class="form-line" />
     </view>
     <view class="page-section">
       <view class="page-section-btns">
