--- a/page/StorageWork/PurchaseOrderListPic/PurchaseOrderListPic.axml
+++ b/page/StorageWork/PurchaseOrderListPic/PurchaseOrderListPic.axml
@@ -1,12 +1,16 @@
 <view class="page">
-  <view class="page-description">图片</view>
-  <view class="page-section" a:for="{{array}}" a:for-item="item">
-    <view class="page-section-title">{{item.text}}</view>
+  <view class="page-description">{{no_purchase_1}}</view>
+  <view style="display: flex; justify-content: space-between;">
+  <view><button type="ghost" size="mini" onTap="add" loading>上传图</button></view>
+  <view><button type="ghost" size="mini" onTap="del" loading>整单删</button></view>
+  </view>
+  <view class="page-section" a:for="{{pic_list}}" a:for-item="item">
+    <view class="page-section-title">{{item.qty_sort}}</view>
     <view class="page-section-demo">
       <image class="image"
-        data-name="widthFix"
+        data-name="{{item.qty_sort}}"
         onTap="onTap"
-        mode="widthFix" src="{{src}}" />
+        mode="widthFix" src="{{item.url}}" />
     </view>
   </view>
 </view>
