--- a/page/StorageWork/PurchaseList4Manage/PurchaseList4Manage.axml
+++ b/page/StorageWork/PurchaseList4Manage/PurchaseList4Manage.axml
@@ -1,3 +1,8 @@
+<import src="/page/biz/components/list/index.axml" />
 <view>
-  New Page
+  <button type="ghost" size="mini" onTap="newdate_1">{{date_1}}</button>
+  <button style="margin-left: 5px;" type="ghost" size="mini" onTap="newdate_2">{{date_2}}</button>
+</view>
+<view>
+  <template is="List" data={{...listData}}></template>
 </view>
