--- a/page/StorageWork/PurchaseList3Check2/PurchaseList3Check2.axml
+++ b/page/StorageWork/PurchaseList3Check2/PurchaseList3Check2.axml
@@ -5,7 +5,7 @@
   <button type="ghost" size="mini" onTap="newdate_1">{{date_1}}</button>
   <button style="margin-left: 5px;" type="ghost" size="mini" onTap="newdate_2">{{date_2}}</button>
   </view>
-  <button type="ghost" size="mini" onTap="add" loading>增加</button>
+  <button type="ghost" size="mini" onTap="check" loading>审核</button>
 </view>
 <view>
     <template is="List" data={{...listData}}></template>
