--- a/page/StorageWork/PurchaseList4Manage2/PurchaseList4Manage2.axml
+++ b/page/StorageWork/PurchaseList4Manage2/PurchaseList4Manage2.axml
@@ -1,11 +1,7 @@
 <import src="/page/biz/components/list/index.axml" />
 
-<view style="display: flex; justify-content: space-between;">
-  <view>
-  <button type="ghost" size="mini" onTap="newdate_1">{{date_1}}</button>
-  <button style="margin-left: 5px;" type="ghost" size="mini" onTap="newdate_2">{{date_2}}</button>
-  </view>
-  <button type="ghost" size="mini" onTap="add" loading>增加</button>
+<view>
+  <button type="ghost" size="mini" onTap="check" loading>去审</button>
 </view>
 <view>
     <template is="List" data={{...listData}}></template>
