--- a/page/StorageWork/DingStorageIn/DingStorageIn.axml
+++ b/page/StorageWork/DingStorageIn/DingStorageIn.axml
@@ -6,6 +6,9 @@
   <view>
     <button type="ghost" size="mini" onTap="add_enter" loading>手输增加</button>
   </view>
+  <view>
+    <button type="ghost" size="mini" onTap="add_pic" loading>入库上图</button>
+  </view>
 </view>
 <view>
   <template is="List" data={{...listData}}></template>
