--- a/page/StorageWork/PurchaseList5Check2/PurchaseList5Check2.axml
+++ b/page/StorageWork/PurchaseList5Check2/PurchaseList5Check2.axml
@@ -1,7 +1,8 @@
 <import src="/page/biz/components/list/index.axml" />
 
 <view>
-  <button type="ghost" size="mini" onTap="check" loading>审核</button>
+  <button type="ghost" size="mini" onTap="go_last" loading>退回</button>
+  <button style="margin-left: 5px;" type="ghost" size="mini" onTap="go_next" loading>审核</button>
 </view>
 <view>
     <template is="List" data={{...listData}}></template>
