--- a/page/StorageWork/PurchaseList6Manage2/PurchaseList6Manage2.axml
+++ b/page/StorageWork/PurchaseList6Manage2/PurchaseList6Manage2.axml
@@ -1,7 +1,7 @@
 <import src="/page/biz/components/list/index.axml" />
 
 <view>
-  <button type="ghost" size="mini" onTap="check" loading>去审</button>
+  <button type="ghost" size="mini" onTap="go_last" loading>去审</button>
 </view>
 <view>
     <template is="List" data={{...listData}}></template>
