--- a/page/StorageWork/PurchasePic/PurchasePic.axml
+++ b/page/StorageWork/PurchasePic/PurchasePic.axml
@@ -2,6 +2,7 @@
   <view class="page-description">{{no_purchase_1}}</view>
   <view style="display: flex; justify-content: space-between;">
   <view><button type="ghost" size="mini" onTap="add" loading>上传图</button></view>
+  <view><button type="ghost" size="mini" onTap="go_next" loading>下一步</button></view>
   <view><button type="ghost" size="mini" onTap="del" loading>整单删</button></view>
   </view>
   <view class="page-section" a:for="{{pic_list}}" a:for-item="item">
