--- a/page/StorageWork/PurchaseEditPriceBody/PurchaseEditPriceBody.axml
+++ b/page/StorageWork/PurchaseEditPriceBody/PurchaseEditPriceBody.axml
@@ -63,7 +63,7 @@
     <view class="page-section">
       <view class="page-section-btns">
         <view>
-          <button type="ghost" size="mini" formType="reset">重置</button></view>
+          <button type="ghost" size="mini" onTap="history_price">历史单价</button></view>
         <view>
           <button type="primary" size="mini" formType="submit">提交</button></view>
       </view>
