--- a/page/StorageWork/PurchaseEditPriceBody2/PurchaseEditPriceBody2.axml
+++ b/page/StorageWork/PurchaseEditPriceBody2/PurchaseEditPriceBody2.axml
@@ -1,3 +1,5 @@
+<import src="/page/biz/components/list/index.axml" />
+
 <view>
-  New Page
+    <template is="List" data={{...listData}}></template>
 </view>
