--- a/page/StorageWork/PurchaseList4Price2/PurchaseList4Price2.axml
+++ b/page/StorageWork/PurchaseList4Price2/PurchaseList4Price2.axml
@@ -1,10 +1,8 @@
 <import src="/page/biz/components/list/index.axml" />
 
-<view style="display: flex; justify-content: space-between;">
-  <view>
-  <button type="ghost" size="mini" onTap="newdate_1">{{date_1}}</button>
-  <button style="margin-left: 5px;" type="ghost" size="mini" onTap="newdate_2">{{date_2}}</button>
-  </view>
+<view>
+  <button type="ghost" size="mini" onTap="go_last" loading>退回</button>
+  <button style="margin-left: 5px;" type="ghost" size="mini" onTap="go_next" loading>提审</button>
 </view>
 <view>
     <template is="List" data={{...listData}}></template>
