--- a/page/StorageWork/DingStorageIn2/DingStorageIn2.axml
+++ b/page/StorageWork/DingStorageIn2/DingStorageIn2.axml
@@ -1,10 +1,7 @@
 <import src="/page/biz/components/list/index.axml" />
 <view style="display: flex; justify-content: space-between;">
   <view>
-    <button type="ghost" size="mini" onTap="add_scan" loading>扫码增加</button>
-  </view>
-  <view>
-    <button type="ghost" size="mini" onTap="add_enter" loading>手输增加</button>
+    <button type="ghost" size="mini" onTap="add_pic" loading>入库上图</button>
   </view>
 </view>
 <view>
