--- a/page/StorageWork/PurchaseEditBody/PurchaseEditBody.axml
+++ b/page/StorageWork/PurchaseEditBody/PurchaseEditBody.axml
@@ -48,7 +48,7 @@
     <view class="page-section">
       <view class="page-section-btns">
         <view>
-          <button type="ghost" size="mini" formType="reset">重置</button></view>
+          <button type="ghost" size="mini" onTap="look_pic" loading>图片</button></view>
         <view>
           <button type="primary" size="mini" formType="submit">提交</button></view>
       </view>
