--- a/page/StorageWork/PurchaseList5Check/PurchaseList5Check.axml
+++ b/page/StorageWork/PurchaseList5Check/PurchaseList5Check.axml
@@ -1,7 +1,8 @@
 <import src="/page/biz/components/list/index.axml" />
 <view>
-  <button type="ghost" size="mini" onTap="newdate_1">{{date_1}}</button>
-  <button style="margin-left: 5px;" type="ghost" size="mini" onTap="newdate_2">{{date_2}}</button>
+  <button type="ghost" size="mini" onTap="newdate_1" disabled="{{is_history ? '' : 'disabled'}}">{{date_1}}</button>
+  <button style="margin-left: 5px;" type="ghost" size="mini" onTap="newdate_2" disabled="{{is_history ? '' : 'disabled'}}">{{date_2}}</button>
+  <button style="margin-left: 5px; {{is_history ? '' : 'color: #888;'}}" type="ghost" size="mini" onTap="history_1">历史</button>
 </view>
 <view>
   <template is="List" data={{...listData}}></template>
